# trading_toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
app/: Explorer.py  Strategy_Explorer.py  _path_setup.py  main.py
app/components/: alpaca_data.py  charts.py  engine_runner.py  forms.py  lse_data.py  options_tab.py  style.py  ui.py
app/pages/: 1_Data.py  2_Backtest.py  3_Live.py  4_Scraper.py  Derivatives.py
src/abstract/: __init__.py  models.py  parser.py
src/backtester/: __init__.py  costs.py  engine.py  stress.py
src/core/: __init__.py  derivatives.py  events.py  feeds.py  models.py  parser.py  protocols.py  universe.py
src/data/: __init__.py
src/data/auxiliary/: __init__.py
src/data/auxiliary/macro/: __init__.py  crypto.py
src/data/auxiliary/market/: __init__.py  bid_ask.py
src/data/auxiliary/sentiment/: __init__.py  chan.py  reddit.py  telegram.py
src/data/feeds/: __init__.py  alpaca.py  base.py  binance.py  hyperliquid.py
src/data/historical/: __init__.py  alpaca.py  binance.py  hyperliquid.py  lse_parse.py
src/data/sentiment/: __init__.py
src/data_ingestion/: bid_ask_scrape.py  binance_global_liquidations.py  binance_websocket.py  github_fetch.py  hype_bridge_historical.py  hype_bridge_websocket.py  hype_websocket.py  misc_crypto_scraper.py
src/data_ingestion/sentiment_scrapers/: x_scraper.py
src/execution/: __init__.py  base_executor_feed.py  factory.py  live_engine.py  live_limits.py  live_state.py  multi_exchange_engine.py  single_exchange_engine.py
src/execution/alpaca/: __init__.py  alpaca_executor.py
src/execution/binance/: binance_executor.py  binance_live_feed.py
src/execution/hyperliquid/: hyperliquid_executor.py  hyperliquid_live_feed.py
src/risk/: __init__.py  limits.py  sizing.py  stops.py
src/strategy/: __init__.py  base.py  built_in.py  indicators.py  overlay.py  sizing.py  stoploss.py  stops.py  universe.py
src/testing/: __init__.py
src/testing/backtester/: __init__.py  costs.py  engine.py  stress.py
src/testing/hypothesis/: __init__.py  overfitting.py  splits.py  tests.py  walk_forward.py
src/utils/: __init__.py  http.py  plotting.py  sentiment.py  sentiment_preprocess.py  sentiment_score.py
trading/: alpaca_backtest_demo.py  alpaca_livetest_demo.py  backtest_demo.py  strategy_backtest_demo.py  strategy_live_demo.py
