[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "1.0"
dependencies = [
    # Core data / numerics
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",                      # derivatives.py, hypothesis tests, returns stats
    "statsmodels",                # Ljung-Box + ADF in testing/hypothesis/tests.py

    # Dashboard
    "streamlit",
    "plotly",
    "matplotlib",                 # save-to-file plots in backtester/stress helpers

    # Market data
    "lse-data",                   # the app's only price/option-chain provider
    "python-dotenv",
    "requests",
    "aiohttp",                    # data/auxiliary/macro/crypto.py
    "orjson",                     # feed decoding
    "websocket-client",           # data/feeds/*

    # Exchanges / execution
    "alpaca-py",
    "binance-futures-connector",
    "hyperliquid-python-sdk",
    "eth-account",                # signing in execution/hyperliquid
]
[tool.setuptools]
# Map the root import path to the 'src' directory
package-dir = {"" = "src"}

# Tell it to find all sub-packages inside 'src'
[tool.setuptools.packages.find]
where = ["src"]